fix text not wrapping properly

--- a/resources/scss/partials/comics.scss
+++ b/resources/scss/partials/comics.scss
@@ -43,7 +43,7 @@
                 }
 
                 .comic_text {
-                    width: 80%;
+                    width: calc(80% - 1.5rem);
                     padding: 1rem 2rem;
                     background-color: rgb(228, 228, 228);
                     display: flex;
@@ -59,6 +59,7 @@
 
                     p {
                         color: $dc-dark;
+                        word-wrap: break-word;
                     }
 
                     .bottom_text {
